--- a/views/include/footer.ejs
+++ b/views/include/footer.ejs
@@ -1,4 +1,4 @@
-<footer>
+<footer class="fixed-bottom">
     <div class="f-info">
         <div class="f-info-social">
             <i class="fa-brands fa-square-instagram"></i>
