--- a/views/include/navbar.ejs
+++ b/views/include/navbar.ejs
@@ -4,13 +4,13 @@
     }
 </style>
 
-<nav class="navbar navbar-expand-lg bg-body-light sticky-top border-bottom">
+<nav class="navbar navbar-expand-lg m-nav sticky-top border-bottom">
     <div class="container-fluid">
         <a class="navbar-brand" href="/listing"><i class="fa-solid fa-compass"></i></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-        <div class="collapse navbar-collapse " id="navbarNavAltMarkup">
+        <div class="collapse navbar-collapse m-nav" id="navbarNavAltMarkup">
             <div class="navbar-nav">
                 <a class="nav-link" href="/listing">All listing</a>
             </div>
