--- a/views/listing/error.ejs
+++ b/views/listing/error.ejs
@@ -1,9 +1,8 @@
 <%- layout("/layout/boilerplate.ejs") %>
 
     <body>
-        <div class="alert alert-success d-flex align-items-center offset-2" role="alert">
-            <svg class="bi flex-shrink-0 me-2" role="img" aria-label="Success:"><use xlink:href="#check-circle-fill"/></svg>
-            <div>
+        <div class="alert alert-success d-flex align-items-center offset-2 mt-3" role="alert">
+            <div class="offset-2">
 
                 <%= message %>
 
